Added gender non-conforming

--- a/html/pride.html
+++ b/html/pride.html
@@ -713,6 +713,28 @@
         <br>
         <br>
       </section>
+      <!-- ジェンダークリエイティブ（Gender Non-Conforming） -->
+      <section>
+        <h1>ジェンダークリエイティブ</h1><hr>
+        <div class="pride-color">
+          <p>
+            <span style="">Placeholder text</span><br>
+            <span style="">:3</span>
+          </p>
+        </div>
+        <div class="pride-display">
+          <a href="https://lgbtqia.fandom.com/wiki/Gender_non-conforming" title="ジェンダークリエイティブ" target="_blank">
+            <img class="pride-flag" src="../img/pride/GenderCreative.png" alt="ジェンダークリエイティブ（Gender Non-Conforming）" title="ジェンダークリエイティブ（Gender Non-Conforming）">
+          </a>
+        </div>
+        <p class="p-space">
+          日本語：ジェンダークリエイティブ<br>
+          English: Gender Non-Conforming
+        </p>
+        <br>
+        <br>
+        <br>
+      </section>
       <!-- ジェンダーフェイ（Genderfae） -->
       <section>
         <h1>ジェンダーフェイ</h1><hr>
@@ -890,32 +912,32 @@
         <br>
       </section>
       <!-- NOTICE!!
-           This next section is for a sexuality that is contested and/or legitimately classified 
-           as a mental disorder that would require treatment. ―Wamo, Niji System -->
+       This next section is for a sexuality that is contested and/or legitimately classified
+       as a mental disorder that would require treatment. ―Wamo, Niji System -->
       <!-- ハイパーセクシャル（Hypersexual） -->
       <!--<section>
-        <h1>ハイパーセクシャル</h1><hr>
-        <div class="pride-color">
-          <p>
-            <span style="">Placeholder text</span><br>
-            <span style="">:3</span>
-          </p>
-        </div>
-        <div class="pride-display">-->
-          <!-- Wikipedia link is given below to give an overview as to the reasoning behind my 
-               decision to leave this in here, but commented out. ―Wamo, Niji System -->
-          <!--<a href="https://en.wikipedia.org/wiki/Hypersexuality" title="ハイパーセクシャル" target="_blank">
-            <img class="pride-flag" src="../img/pride/contention/Hypersexual.png" alt="ハイパーセクシャル（Hypersexual）" title="ハイパーセクシャル（Hypersexual）">
-          </a>
-        </div>
-        <p class="p-space">
-          日本語：ハイパーセクシャル<br>
-          English: Hypersexual
-        </p>
-        <br>
-        <br>
-        <br>
-      </section>-->
+    <h1>ハイパーセクシャル</h1><hr>
+    <div class="pride-color">
+      <p>
+        <span style="">Placeholder text</span><br>
+        <span style="">:3</span>
+      </p>
+    </div>
+    <div class="pride-display">-->
+      <!-- Wikipedia link is given below to give an overview as to the reasoning behind my
+       decision to leave this in here, but commented out. ―Wamo, Niji System -->
+      <!--<a href="https://en.wikipedia.org/wiki/Hypersexuality" title="ハイパーセクシャル" target="_blank">
+        <img class="pride-flag" src="../img/pride/contention/Hypersexual.png" alt="ハイパーセクシャル（Hypersexual）" title="ハイパーセクシャル（Hypersexual）">
+      </a>
+    </div>
+    <p class="p-space">
+      日本語：ハイパーセクシャル<br>
+      English: Hypersexual
+    </p>
+    <br>
+    <br>
+    <br>
+  </section>-->
       <!-- インターセックス（Intersex） -->
       <section>
         <h1>インターセックス</h1><hr>
@@ -1071,10 +1093,10 @@
         <br>
       </section>
       <!-- NOTICE!!
-           I'm adding Otherkin/Therian because I honestly think that otherkin (such as 
-           our system's host (Satoki, oni otherkin)) and therians (like many of our 
-           friends) should be seen as people as well. That and this is also somewhat 
-           just for fun. :3 ―Wamo, Niji System -->
+       I'm adding Otherkin/Therian because I honestly think that otherkin (such as
+       our system's host (Satoki, oni otherkin)) and therians (like many of our
+       friends) should be seen as people as well. That and this is also somewhat
+       just for fun. :3 ―Wamo, Niji System -->
       <!-- 獣人（Otherkin & Therian） -->
       <section>
         <h1>獣人</h1><hr>
