Added character art "A Smol Oni ｷﾓﾁｲｲ"

--- a/html/gallery/nizi/SatokiNijikawa.html
+++ b/html/gallery/nizi/SatokiNijikawa.html
@@ -90,6 +90,10 @@
             <img class="gallery-art" src="../../../img/gallery/SatokiNijikawa/Pride 2024.png" alt="プライド・２０２４年">
             <p class="caption">プライド・２０２４年</p>
           </div>
+          <div class="art-gallery" title="A Smol Oni ｷﾓﾁｲｲ">
+            <img class="gallery-art" src="../../../img/gallery/SatokiNijikawa/A Smol Oni ｷﾓﾁｲｲ.png" alt="A Smol Oni ｷﾓﾁｲｲ">
+            <p class="caption">A Smol Oni ｷﾓﾁｲｲ</p>
+          </div>
         </div>
       </section>
       <!-- 旧レファレンス（Old ref sheets :3） -->
