--- a/html/gallery/nizi/SatokiNijikawa.html
+++ b/html/gallery/nizi/SatokiNijikawa.html
@@ -95,6 +95,8 @@
             <p class="caption">A Smol Oni ｷﾓﾁｲｲ</p>
           </div>
         </div>
+        <div class="flex-gallery" title="Flexbox 【美術品】・Ｃ">
+        </div>
       </section>
       <!-- 旧レファレンス（Old ref sheets :3） -->
       <section class="gallery" title="旧レファレンス">
