Code Cleanup V and added art for Zhang Lingxin

--- a/html/nizi.html
+++ b/html/nizi.html
@@ -52,7 +52,7 @@
             </a>
             <br>
             <a href="https://lgbtqia.fandom.com/wiki/Asexual_spectrum#Gray-asexual" title="グレイアセクシャル" target="_blank">
-              <img class="pride-flag" src="../img/pride/GrayAce.png" alt="グレイアセクシャル（Gray Asexual）" title="グレイアセクシャル（Gray Asexual）">
+              <img class="pride-flag" src="../img/pride/GrayAsexual.png" alt="グレイアセクシャル（Gray Asexual）" title="グレイアセクシャル（Gray Asexual）">
             </a>
             <br>
             <a href="https://lgbtqia.fandom.com/wiki/Aromantic" title="アロマンティック" target="_blank">
