--- a/html/spirit.html
+++ b/html/spirit.html
@@ -30,15 +30,15 @@
   </head>
   <body>
     <header>
-      <div class="heading">
-        <h1 class="header-text">天園神關里　～ Brilliance of Heaven Pleasure</h1>
-        <h2 class="header-text">造化神録</h2>
-        <h3 class="header-text">スピリットカード</h3>
-      </div>
+      <h1 class="header-text">
+        天園神關里　～ Brilliance of Heaven Pleasure<br>
+        造化神録<br>
+        スピリットカード
+      </h1>
     </header>
-    <article>
+    <main>
       <p class="coming-soon">乞うご期待！！</p>
-    </article>
+    </main>
     <footer>
       <p>© 2024 虹川郷鬼</p>
     </footer>
