--- a/html/ushie.html
+++ b/html/ushie.html
@@ -2555,9 +2555,9 @@
           <h4 id="Kouko_Shitahara">士田原コウコ</h4>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
-            <p class="pronouns">代名詞：she/her</p>
-            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+            <p class="pronouns">代名詞：she/wolf</p>
+            <a href="https://lgbtqia.fandom.com/wiki/" title="デミ女" target="_blank">
+              <img class="pride-flag" src="../img/pride/Demigirl.png" alt="デミ女（Demigirl）" title="デミ女（Demigirl）">
             </a>
             <br>
           </div>
@@ -2576,13 +2576,13 @@
           </p>
           <p>
             性別：♀<br>
-            性自認：女<br>
-            代名詞：彼女（she/her）<br>
-            雌雄性：
+            性自認：デミ女<br>
+            代名詞：彼女／<ruby>奴<rt>ウルフ</rt></ruby>（she/wolf）<br>
+            雌雄性：知るには若すぎるよー！！
           </p>
           <p>
-            誕生日：<br>
-            年齢：
+            誕生日：アシュ０３３３年１２月２８日<br>
+            年齢：１２歳
           </p>
           <p>家族：</p>
           <p>正美子と靈尋のお友達である。</p>
@@ -2635,7 +2635,7 @@
             雌雄性：デミロマンティックとアセクシャル
           </p>
           <p>
-            誕生日：０３２９年８月１０日<br>
+            誕生日：アシュ０３２９年８月１０日<br>
             年齢：１６歳
           </p>
           <p>家族：</p>
@@ -2726,7 +2726,7 @@
             雌雄性：アロ＝エイス
           </p>
           <p>
-            誕生日：０３３０年２月２３日<br>
+            誕生日：アシュ０３３０年２月２３日<br>
             年齢：１５歳
           </p>
           <p>
@@ -2783,8 +2783,8 @@
             雌雄性：ロマンスを虫唾が走ったレズビアン
           </p>
           <p>
-            誕生日：０２９６年３月２５日<br>
-            年齢：３８歳（死んだ）
+            誕生日：アシュ０２９６年３月２５日<br>
+            年齢：３８歳で亡くなった
           </p>
           <p>
             家族：田香羅皐戎傘（子）<br>
@@ -2838,7 +2838,7 @@
             雌雄性：知るには若すぎるよー！！
           </p>
           <p>
-            誕生日：０３３４年１月２２日<br>
+            誕生日：アシュ０３３４年１月２２日<br>
             年齢：１１歳
           </p>
           <p>
@@ -2960,7 +2960,7 @@
             雌雄性：オムニセクシャル
           </p>
           <p>
-            誕生日：０３３２年９月１日<br>
+            誕生日：アシュ０３３２年９月１日<br>
             年齢：１３歳
           </p>
           <p>家族：</p>
@@ -3140,7 +3140,7 @@
             <br>
           </div>
           <div class="art-chara">
-            <img class="art" src="../img/fill.png" alt="張靈尋">
+            <img class="art" src="../img/art/張靈尋.png" alt="張靈尋">
             <p class="caption">靈尋</p>
           </div>
           <p>零記憶を持つ月の巫女</p>
@@ -3156,7 +3156,7 @@
             性別：♀<br>
             性自認：ノンバイナリー・トランスフェミニン<br>
             代名詞：彼女／奴／<ruby>奴<rt>フェ</rt></ruby>（she/they/fae）<br>
-            雌雄性：
+            雌雄性：知るには若すぎるよー！！
           </p>
           <p>
             誕生日：<br>
