--- a/html/gallery/nizi/Youko.html
+++ b/html/gallery/nizi/Youko.html
@@ -37,29 +37,29 @@
       </h1>
     </header>
     <main>
-        <!-- 造化神録に戻る（Return to the Record） -->
-        <a href="../../nizi.html#Youko" title="造化神録に戻る">←　造化神録に戻る</a>
-        <!-- 現在レファレンス（Current Ref Sheet） -->
-        <div class="gallery" title="現在レファレンス">
-          <h2 class="art-heading">レファレンス</h2><hr>
-          <div class="flex-gallery" title="Flexbox 【レファレンス】">
-            <div class="art-ref" title="妖狐のレファレンス">
-              <img class="gallery-art" src="../../../img/ref/Youko.png" alt="妖狐のレファレンス">
-            </div>
+      <!-- 造化神録に戻る（Return to the Record） -->
+      <a href="../../nizi.html#Youko" title="造化神録に戻る">←　造化神録に戻る</a>
+      <!-- 現在レファレンス（Current Ref Sheet） -->
+      <section class="gallery" id="現在レファレンス">
+        <h2 class="art-heading">レファレンス</h2><hr>
+        <div class="flex-gallery" id="Flexbox 【レファレンス】">
+          <div class="art-ref" id="妖狐のレファレンス">
+            <img class="gallery-art" src="../../../img/ref/Youko.png" alt="妖狐のレファレンス">
           </div>
         </div>
-        <!-- 美術品（All Art） -->
-        <div class="gallery" title="美術品">
-          <h2 class="art-heading">美術品</h2><hr>
-          <div class="flex-gallery" title="Flexbox 【美術品】">
-          </div>
+      </section>
+      <!-- 美術品（All Art） -->
+      <section class="gallery" id="美術品">
+        <h2 class="art-heading">美術品</h2><hr>
+        <div class="flex-gallery" id="Flexbox 【美術品】">
         </div>
-        <!-- 旧レファレンス（Old ref sheets :3） -->
-        <div class="gallery" title="旧レファレンス">
-          <h2 class="art-heading">旧レファレンス</h2><hr>
-          <div class="flex-gallery" title="Flexbox 【旧レファレンス】">
-          </div>
+      </section>
+      <!-- 旧レファレンス（Old ref sheets :3） -->
+      <section class="gallery" id="旧レファレンス">
+        <h2 class="art-heading">旧レファレンス</h2><hr>
+        <div class="flex-gallery" id="Flexbox 【旧レファレンス】">
         </div>
+      </section>
     </main>
     <footer>
       <p>© 2024 虹川郷鬼</p>
