--- a/html/gallery/nizi/SatokiNijikawa.html
+++ b/html/gallery/nizi/SatokiNijikawa.html
@@ -40,68 +40,68 @@
       <!-- 造化神録に戻る（Return to the Record） -->
       <a href="../../nizi.html#Satoki_Nijikawa" title="造化神録に戻る">←　造化神録に戻る</a>
       <!-- 現在レファレンス（Current Ref Sheet） -->
-      <section class="gallery" title="現在レファレンス">
+      <section class="gallery" id="現在レファレンス">
         <h2 class="art-heading">レファレンス</h2><hr>
-        <div class="flex-gallery" title="Flexbox 【レファレンス】">
-          <div class="art-ref" title="郷鬼のレファレンス">
+        <div class="flex-gallery" id="Flexbox 【レファレンス】">
+          <div class="art-ref" id="郷鬼のレファレンス">
             <img class="reference-art" src="../../../img/ref/SatokiNijikawa.png" alt="郷鬼のレファレンス">
           </div>
         </div>
       </section>
       <!-- 美術品（All Art） -->
-      <section class="gallery" title="美術品">
+      <section class="gallery" id="美術品">
         <h2 class="art-heading">美術品</h2><hr>
-        <div class="flex-gallery" title="Flexbox 【美術品】・Ａ">
-          <div class="art-gallery" title="虹川郷鬼（PC-98版）">
+        <div class="flex-gallery" id="Flexbox 【美術品】・Ａ">
+          <div class="art-gallery" id="虹川郷鬼（PC-98版）">
             <img class="gallery-art" src="../../../img/gallery/SatokiNijikawa/虹川郷鬼（PC-98版）.png" alt="虹川郷鬼（PC-98版）">
             <p class="caption">虹川郷鬼（PC-98版）</p>
           </div>
-          <div class="art-gallery" title="郷鬼（スライムの姿）">
+          <div class="art-gallery" id="郷鬼（スライムの姿）">
             <img class="gallery-art" src="../../../img/gallery/SatokiNijikawa/郷鬼（スライムの姿）.png" alt="郷鬼（スライムの姿）">
             <p class="caption">郷鬼（スライムの姿）</p>
           </div>
-          <div class="art-gallery" title="ポグ">
+          <div class="art-gallery" id="ポグ">
             <img class="gallery-art" src="../../../img/gallery/SatokiNijikawa/ポグ.gif" alt="ポグ">
             <p class="caption">ポグ</p>
           </div>
-          <div class="art-gallery" title="郷鬼のスプライト">
+          <div class="art-gallery" id="郷鬼のスプライト">
             <img class="gallery-art" src="../../../img/gallery/SatokiNijikawa/Satoki Sprite.png" alt="郷鬼のスプライト">
             <p class="caption">郷鬼のスプライト</p>
           </div>
-          <div class="art-gallery" title="郷鬼のスプライト・ブラジャーとオムツ">
+          <div class="art-gallery" id="郷鬼のスプライト・ブラジャーとオムツ">
             <img class="gallery-art" src="../../../img/gallery/SatokiNijikawa/Satoki Sprite - Bra & Diaper.png" alt="郷鬼のスプライト・ブラジャーとオムツ">
             <p class="caption">郷鬼のスプライト・ブラジャーとオムツ</p>
           </div>
         </div>
-        <div class="flex-gallery" title="Flexbox 【美術品】・Ｂ">
-          <div class="art-gallery" title="トランスゲンダーの旗を持つ郷鬼">
+        <div class="flex-gallery" id="Flexbox 【美術品】・Ｂ">
+          <div class="art-gallery" id="トランスゲンダーの旗を持つ郷鬼">
             <img class="gallery-art" src="../../../img/gallery/SatokiNijikawa/hold your pride flag!.png" alt="トランスゲンダーの旗を持つ郷鬼">
             <p class="caption">トランスゲンダーの旗を持つ郷鬼</p>
           </div>
-          <div class="art-gallery" title="王座に座る郷鬼">
+          <div class="art-gallery" id="王座に座る郷鬼">
             <img class="gallery-art" src="../../../img/gallery/SatokiNijikawa/Throne.png" alt="王座に座る郷鬼">
             <p class="caption">王座に座る郷鬼</p>
           </div>
-          <div class="art-gallery" title="虹川郷鬼（PC-98・プライド版）">
+          <div class="art-gallery" id="虹川郷鬼（PC-98・プライド版）">
             <img class="gallery-art" src="../../../img/gallery/SatokiNijikawa/Satoki (PC-98 Pride).png" alt="虹川郷鬼（PC-98・プライド版）">
             <p class="caption">虹川郷鬼（PC-98・プライド版）</p>
           </div>
-          <div class="art-gallery" title="プライド・２０２４年">
+          <div class="art-gallery" id="プライド・２０２４年">
             <img class="gallery-art" src="../../../img/gallery/SatokiNijikawa/Pride 2024.png" alt="プライド・２０２４年">
             <p class="caption">プライド・２０２４年</p>
           </div>
-          <div class="art-gallery" title="A Smol Oni ｷﾓﾁｲｲ">
+          <div class="art-gallery" id="A Smol Oni ｷﾓﾁｲｲ">
             <img class="gallery-art" src="../../../img/gallery/SatokiNijikawa/A Smol Oni ｷﾓﾁｲｲ.png" alt="A Smol Oni ｷﾓﾁｲｲ">
             <p class="caption">A Smol Oni ｷﾓﾁｲｲ</p>
           </div>
         </div>
-        <div class="flex-gallery" title="Flexbox 【美術品】・Ｃ">
+        <div class="flex-gallery" id="Flexbox 【美術品】・Ｃ">
         </div>
       </section>
       <!-- 旧レファレンス（Old ref sheets :3） -->
-      <section class="gallery" title="旧レファレンス">
+      <section class="gallery" id="旧レファレンス">
         <h2 class="art-heading">旧レファレンス</h2><hr>
-        <div class="flex-gallery" title="Flexbox 【旧レファレンス】">
+        <div class="flex-gallery" id="Flexbox 【旧レファレンス】">
         </div>
       </section>
     </main>
