--- a/html/gallery/nizi/Wamo.html
+++ b/html/gallery/nizi/Wamo.html
@@ -40,36 +40,36 @@
       <!-- 造化神録に戻る（Return to the Record） -->
       <a href="../../nizi.html#Wamo" title="造化神録に戻る">←　造化神録に戻る</a>
       <!-- 現在レファレンス（Current Ref Sheet） -->
-      <section class="gallery" title="現在レファレンス">
+      <section class="gallery" id="現在レファレンス">
         <h2 class="art-heading">レファレンス</h2><hr>
-        <div class="flex-gallery" title="Flexbox 【レファレンス】">
-          <div class="art-ref" title="アニムスのレファレンス">
+        <div class="flex-gallery" id="Flexbox 【レファレンス】">
+          <div class="art-ref" id="アニムスのレファレンス">
             <img class="reference-art" src="../../../img/ref/Wamo.png" alt="ワーモのレファレンス">
           </div>
         </div>
       </section>
       <!-- 美術品（All Art） -->
-      <section class="gallery" title="美術品">
+      <section class="gallery" id="美術品">
         <h2 class="art-heading">美術品</h2><hr>
-        <div class="flex-gallery" title="Flexbox 【美術品】">
-          <div class="art-gallery" title="ワーモ（PC-98版）">
+        <div class="flex-gallery" id="Flexbox 【美術品】">
+          <div class="art-gallery" id="ワーモ（PC-98版）">
             <img class="gallery-art" src="../../../img/gallery/Wamo/ワーモ（PC-98版）.png" alt="ワーモ（PC-98版）">
             <p class="caption">ワーモ（PC-98版）</p>
           </div>
-          <div class="art-gallery" title="ワーモ（PC-98・プライド版）">
+          <div class="art-gallery" id="ワーモ（PC-98・プライド版）">
             <img class="gallery-art" src="../../../img/gallery/Wamo/Wamo (PC-98 Pride).png" alt="ワーモ（PC-98・プライド版）">
             <p class="caption">ワーモ（PC-98・プライド版）</p>
           </div>
-          <div class="art-gallery" title="プライド・２０２４年">
+          <div class="art-gallery" id="プライド・２０２４年">
             <img class="gallery-art" src="../../../img/gallery/Wamo/Pride 2024.png" alt="プライド・２０２４年">
             <p class="caption">プライド・２０２４年</p>
           </div>
         </div>
       </section>
       <!-- 旧レファレンス（Old ref sheets :3） -->
-      <section class="gallery" title="旧レファレンス">
+      <section class="gallery" id="旧レファレンス">
         <h2 class="art-heading">旧レファレンス</h2><hr>
-        <div class="flex-gallery" title="Flexbox 【旧レファレンス】">
+        <div class="flex-gallery" id="Flexbox 【旧レファレンス】">
         </div>
       </section>
     </main>
