--- a/html/gallery/spalmea/ArendtCederstrom.html
+++ b/html/gallery/spalmea/ArendtCederstrom.html
@@ -40,24 +40,24 @@
       <!-- 造化神録に戻る（Return to the Record） -->
       <a href="../../spalmea.html#Arendt_Cederström" title="造化神録に戻る">←　造化神録に戻る</a>
       <!-- 現在レファレンス（Current Ref Sheet） -->
-      <setion class="gallery" title="現在レファレンス">
+      <setion class="gallery" id="現在レファレンス">
         <h2 class="art-heading">レファレンス</h2><hr>
-        <div class="flex-gallery" title="Flexbox 【レファレンス】">
-          <div class="art-ref" title="アレントのレファレンス">
+        <div class="flex-gallery" id="Flexbox 【レファレンス】">
+          <div class="art-ref" id="アレントのレファレンス">
             <img class="reference-art" src="../../../img/ref/ArendtCederström.png" alt="アレントのレファレンス">
           </div>
         </div>
       </setion>
       <!-- 美術品（All Art） -->
-      <section class="gallery" title="美術品">
+      <section class="gallery" id="美術品">
         <h2 class="art-heading">美術品</h2><hr>
-        <div class="flex-gallery" title="Flexbox 【美術品】">
+        <div class="flex-gallery" id="Flexbox 【美術品】">
         </div>
       </section>
       <!-- 旧レファレンス（Old ref sheets :3） -->
-      <section class="gallery" title="旧レファレンス">
+      <section class="gallery" id="旧レファレンス">
         <h2 class="art-heading">旧レファレンス</h2><hr>
-        <div class="flex-gallery" title="Flexbox 【旧レファレンス】">
+        <div class="flex-gallery" id="Flexbox 【旧レファレンス】">
         </div>
       </section>
     </main>
