--- a/html/gallery/spalmea/DanielaNystrom.html
+++ b/html/gallery/spalmea/DanielaNystrom.html
@@ -40,24 +40,24 @@
       <!-- 造化神録に戻る（Return to the Record） -->
       <a href="../../spalmea.html#Daniela_Nyström" title="造化神録に戻る">←　造化神録に戻る</a>
       <!-- 現在レファレンス（Current Ref Sheet） -->
-      <div class="gallery" title="現在レファレンス">
+      <div class="gallery" id="現在レファレンス">
         <h2 class="art-heading">レファレンス</h2><hr>
-        <div class="flex-gallery" title="Flexbox 【レファレンス】">
-          <div class="art-ref" title="ダニエラのレファレンス">
+        <div class="flex-gallery" id="Flexbox 【レファレンス】">
+          <div class="art-ref" id="ダニエラのレファレンス">
             <img class="reference-art" src="../../../img/ref/DanielaNyström.png" alt="ダニエラのレファレンス">
           </div>
         </div>
       </div>
       <!-- 美術品（All Art） -->
-      <div class="gallery" title="美術品">
+      <div class="gallery" id="美術品">
         <h2 class="art-heading">美術品</h2><hr>
-        <div class="flex-gallery" title="Flexbox 【美術品】">
+        <div class="flex-gallery" id="Flexbox 【美術品】">
         </div>
       </div>
       <!-- 旧レファレンス（Old ref sheets :3） -->
-      <div class="gallery" title="旧レファレンス">
+      <div class="gallery" id="旧レファレンス">
         <h2 class="art-heading">旧レファレンス</h2><hr>
-        <div class="flex-gallery" title="Flexbox 【旧レファレンス】">
+        <div class="flex-gallery" id="Flexbox 【旧レファレンス】">
         </div>
       </div>
     </main>
